Upgraded font awesome from 4.5 to 5.2.0

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,500,700,800">
     <link rel="shortcut icon" href="assets/favicon.ico">
     <link href="css/theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
    </head>
    <body id="page-top" class="index">
@@ -18,10 +18,10 @@
     <header>
       <div class="center">
         <table class="htable">
-          <td><a href="https://github.com/kirisanth-g"><i class="fa fa-github fa-2x icon-cog"></i></a></td>
-          <td><a href="https://ca.linkedin.com/in/kirisanth"><i class="fa fa-linkedin-square fa-2x icon-cog"></i></a></td>
-          <td><a href="http://kirisanth.com/assets/Resume.pdf"><i class="fa fa-file-text fa-2x icon-cog"></i></a></td>
-          <td><a href="mailto:k.ganeshamoorthy@mail.utoronto.com"><i class="fa fa-envelope fa-2x icon-cog"></i></a></td>
+          <td><a href="https://github.com/kirisanth-g"><i class="fab fa-github fa-2x icon-cog"></i></a></td>
+          <td><a href="https://ca.linkedin.com/in/kirisanth"><i class="fab fa-linkedin fa-2x icon-cog"></i></a></td>
+          <td><a href="http://kirisanth.com/assets/Resume.pdf"><i class="fas fa-file-alt fa-2x icon-cog"></i></a></td>
+          <td><a href="mailto:k.ganeshamoorthy@mail.utoronto.com"><i class="fas fa-envelope fa-2x icon-cog"></i></a></td>
         </table>
         <img id="logo" src="assets/logo_w.png">
         <br>
