Updated email address

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <td><a href="https://github.com/kirisanth-g"><i class="fab fa-github fa-2x icon-cog"></i></a></td>
           <td><a href="https://ca.linkedin.com/in/kirisanth"><i class="fab fa-linkedin fa-2x icon-cog"></i></a></td>
           <td><a href="http://kirisanth.com/assets/Resume.pdf"><i class="fas fa-file-alt fa-2x icon-cog"></i></a></td>
-          <td><a href="mailto:k.ganeshamoorthy@mail.utoronto.com"><i class="fas fa-envelope fa-2x icon-cog"></i></a></td>
+          <td><a href="mailto:kirisanth.g@gmail.com"><i class="fas fa-envelope fa-2x icon-cog"></i></a></td>
         </table>
         <img id="logo" src="assets/logo_w.png">
         <br>
