Fixed CSSLint issues

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <td><a href="http://kirisanth.com/assets/Resume.pdf"><i class="fas fa-file-alt fa-2x icon-cog"></i></a></td>
           <td><a href="mailto:kirisanth.g@gmail.com"><i class="fas fa-envelope fa-2x icon-cog"></i></a></td>
         </table>
-        <img id="logo" src="assets/logo_w.png">
+        <img class="logo" src="assets/logo_w.png">
         <br>
         <h1><span>Kirisanth Ganeshamoorthy</span></h1>
       </div>
